--- a/README
+++ b/README
@@ -12,21 +12,20 @@ lines to your .emacs file::
 Dylan-slime interface
 ---------------------
 
-To enable slime with Open Dylan, compile project dswank (located in
-opendylan/sources/environment/dswank)::
+dswank is part of the release since opendylan-2011.1
 
-  $ OPEN_DYLAN_USER_REGISTRIES=fundev/sources/registry opendylan -build dswank
+Get slime from
 
-The binary will end up in ``~/Open-Dylan/bin/dswank``.
+  http://opendylan.org/~hannes/slime.tar.gz (tarball from February 2011)
 
-Afterwards download slime with  ::
+Set OPEN_DYLAN_USER_REGISTRIES environment variable to point to your registry/ies:
 
-  cvs -d :pserver:anonymous:anonymous@common-lisp.net:/project/slime/cvsroot co slime
+  OPEN_DYLAN_USER_REGISTRIES=/path/to/opendylan/sources/registry
 
 Add the following lines to your .emacs file::
 
   (add-to-list 'load-path "/path/to/slime/")  ; your SLIME directory
-  (setq inferior-lisp-program "/path/to/dswank") ; your dswank binary
+  (setq inferior-lisp-program "/opt/opendylan-2011.1/bin/dswank") ; your dswank binary
   (require 'slime)
   (slime-setup '(slime-dylan slime-repl))
 
